syntax = "proto3";
package cosmos_sdk.x.bank.v1;

import "third_party/proto/gogoproto/gogo.proto";
import "third_party/proto/google/api/annotations.proto";
import "types/types.proto";
import "types/query/pagination.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/bank/types";

// Query provides defines the gRPC querier service
service Query {
    // Balance queries the balance of a single coin for a single account
    rpc Balance (BalanceRequest) returns (BalanceResponse) {
        option (google.api.http) = {
            get: "/bank/balance/{address}/{denom}"
        };
    }

    // AllBalances queries the balance of all coins for a single account
    rpc AllBalances (AllBalancesRequest) returns (AllBalancesResponse) {
        option (google.api.http) = {
            get: "/bank/balances/{address}"
        };
    }

    rpc TotalSupply (TotalSupplyRequest) returns (TotalSupplyResponse) {
        option (google.api.http) = {
            get: "/bank/total"
        };
    }

    rpc SupplyOf (SupplyOfRequest) returns (SupplyOfResponse) {
        option (google.api.http) = {
            get: "/bank/total/{denom}"
        };
    }
}

// QueryBalanceParams defines the params for querying an account balance.
message BalanceRequest {
    bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string denom = 2;
}

// QueryBalanceResponse is the response for the QueryBalance rpc method
message BalanceResponse {
    cosmos_sdk.v1.Coin balance = 1;
}

// QueryAllBalancesParams defines the params for querying all account balances
message AllBalancesRequest {
    bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    cosmos_sdk.query.v1.PageRequest page = 2;
}

// QueryAllBalancesResponse is the response to the QueryAllBalances rpc method
message AllBalancesResponse {
    repeated cosmos_sdk.v1.Coin balances = 1 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
    cosmos_sdk.query.v1.PageResponse page = 2;
}

message TotalSupplyRequest {
    // TODO: add pagination once supply is can be supported
    // cosmos_sdk.query.v1.PageRequest page = 1;
}

message TotalSupplyResponse {
    repeated cosmos_sdk.v1.Coin balances = 1 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];

    // TODO: add pagination once supply is can be supported
    // cosmos_sdk.query.v1.PageResponse page = 2;
}

message SupplyOfRequest {
    string denom = 1;
}

message SupplyOfResponse {
    string amount = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}
